# goit-pythonweb-hw-06

./: .env.example  alembic.ini  database.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 51191ed72f78_initial_migration.py  79303acf2daf_initial_migration.py
